# TrabalhoTresDSP2026.1

./: .env  Divisao_de_tarefas.txt  Dockerfile  README.md  carga_inicial.py  database.py  docker-compose.yml  main.py  pyproject.toml
endpoints/: documento.py  endereço.py  loja.py  pedido.py  produto.py  usuario.py
entidades/: documento.py  endereço.py  loja.py  pedido.py  produto.py
routes/: documento.py  produto.py
servicos/: minio_service.py
