[project]
name = "trabalhotres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.1.0",
    "fastapi>=0.138.1",
    "fastapi-pagination>=0.15.15",
    "minio>=7.2.20",
    "motor>=3.7.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "faker>=40.23.0",
]
